2020-09-18 full_catering.backup added loss items and avery label as example insert for commercial barcode.
2020-09-19 catering.py corrected type error in info
2020-09-19 catering.py blocked payments after switching employee-clients and not yet logged on switched employee.
2020-09-19 catering.py after switching employee-clients replacement emptying ordering display
2020-09-19 catering.py after paying or switching empty caches for cash payments in modest calculator
2020-09-20 catering.py module requestLoss added view item_price
2020-09-20 catering.py unused module bookingLoss Menu removed
2020-09-20 catering.py modest calculator also removed caches by no transactions
2020-09-21 catering.py color closeButton after pay changed
2020-09-22 catering.py several modules by tabelview clicking on first column table definition moved after idx.column==0 to avoid wrong selections
2020-09-22 catering.py removed bug by selecting suppliers in module all orders view purchasemenu.
2020-09-22 catering.py view selections repaired purchasemenu all orders vies and yet to order views
2020-09-25 catering.py module bookingLoss added possibility to book - for warehouse balance by differences
2020-09-25 catering.py module bookingLoss default - placed by input to avoid misunderstandings
2020-09-26 catering.py module imports/expired added prefix - number
2020-10-27 catering.py in seatsArrange module removed button refresh, table and seats transactions are automatically
           showed now after each modification.
           Applied changes to preserve notifications
2020-10-27 LINUX_install.txt terminal commands applied for backup delete and restore database catering (commands for full_catering.backup)
2020-10-28 Documentation_Catering_POS.pdf and table_management.png changed for above adjustments
2020-11-25 catering.py added notification by refusing access to operate employee (access level 0)
2020-11-26 catering.py by no access employee show red sign